--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   },
   "homepage": "https://github.com/otisdog8/news-express-api#readme",
   "dependencies": {
+    "axios": "^1.3.3",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongodb": "5.0",
+    "pm2": "^5.2.2"
   }
 }
