--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/otisdog8/news-express-api#readme",
   "dependencies": {
     "axios": "^1.3.3",
+    "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongodb": "5.0",
