--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "fuse.js": "^6.6.2",
     "mongodb": "5.0",
     "openai": "^3.1.0",
     "pm2": "^5.2.2"
