Improved default env file

--- a/.env.default
+++ b/.env.default
@@ -2,3 +2,7 @@
 NEWSCATCHER_KEY="KEY"
 MONGODB_USER="USER"
 MONGODB_PASS="PASSWORD"
+MONGODB_URL="thing1.thing2.mongodb.net"
+OPENAI_API_KEY="key"
+TWILIO_KEY="key"
+APIROTATION_AUTH="authstr"
